# StatForge

./: pyproject.toml
.github/workflows/: pr.yaml  publish.yaml
statforge/: __main__.py
statforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
